--- a/frontend/components/sign-up/css/sign-up.css
+++ b/frontend/components/sign-up/css/sign-up.css
@@ -61,6 +61,7 @@ sign-up #loginPricing {
 }
 
 sign-up .registerError {
+    max-width: 400px;
     color: #e44539 !important;
     margin: 20px 20px 5px;
     font-weight: normal;
