ISSUE #458 - Fix the showing of unavailable projects and models

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -43,6 +43,21 @@ account-assign md-tabs-content-wrapper {
 }
 
 /** Account ***********************************************************************************************************/
+account-dir .loadingText {
+  padding-top: 100px;
+  min-height: 200px;
+  height: 100%;
+  text-align: center;
+  font-weight: lighter;
+}
+
+account-dir .loadingText md-progress-circular {
+  display: inline-block;
+  margin: 0 auto;
+  margin-left: 0 !important;
+}
+
+
 account-dir {
   overflow-y: auto;
   padding-top: 30px;
@@ -111,7 +126,7 @@ account-items #floating-button {
   right: 15px;
 }
 
-account-items .addHint {
+account-items span.addHint {
   color: grey;
   padding-right: 6px;
   font-size: 14px;
@@ -784,16 +799,7 @@ account-teamspaces md-content {
   min-height: 300px;
 }
 
-account-teamspaces .loadingText {
-  padding-top: 100px;
-  min-height: 200px;
-  text-align: center;
-}
 
-account-teamspaces .loadingText md-progress-circular {
-  display: inline-block;
-  margin: 0 auto;
-}
 
 
 /** Account Assign ***********************************************************************************************/
