--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -6,8 +6,9 @@
 	md-list#accountList.tree-branch(flex)
 		// Accounts
 		div(ng-repeat="account in vm.accounts")
-			div(ng-if="account.permissions.length"
+			div(ng-if="vm.hasViewableProject(account)"
 				layout="column", layout-align="space-between")
+
 				md-list-item.tree-node(flex)
 					.account(layout="row", layout-align="start center", md-ink-ripple, flex, ng-click="vm.toggleProjects(account.projects)")
 						md-button.md-icon-button(aria-label="Folder")
@@ -25,8 +26,9 @@
 
 						md-list.tree-branch(ng-repeat="project in account.projects")
 
-							div(ng-if="project.permissions.length"
+							div(ng-if="vm.hasViewableModel(project)"
 								ng-click="vm.toggleProject(project)" layout="row")
+
 								md-list-item.tree-node(flex, md-ink-ripple)
 									md-button.md-icon-button(aria-label="Folder")
 										md-icon.angular-material-icons(ng-show="vm.shouldShow(project)") folder_open
@@ -50,6 +52,8 @@
 													md-icon.angular-material-icons(
 														md-menu-align-target, 
 														style="color:{{value.color}}") {{value.icon}}
+							
+
 
 							// Project Models and Federations
 							md-list.tree-branch(ng-show="vm.shouldShow(project, 'project', account.account)")
