--- a/frontend/components/issues/pug/issues-list-item.pug
+++ b/frontend/components/issues/pug/issues-list-item.pug
@@ -1,6 +1,6 @@
 #issuesListItemContent(layout='column')
 	div(layout='row')
-		#issueRoleIndicator
+		#issueRoleIndicator(ng-style="{backgroundColor: vm.issueRoleColor}")
 		.issueListItemThumbnail(layout="column", layout-align="center center")
 			img(ng-if="vm.data.thumbnail", ng-src="{{vm.data.thumbnailPath}}")
 			md-icon.angular-material-icons.issueListItemMissingThumbnail(ng-if="!vm.data.thumbnail") insert_photo
