--- a/frontend/components/account/pug/account-menu.pug
+++ b/frontend/components/account/pug/account-menu.pug
@@ -2,6 +2,10 @@ md-menu#accountMenu(md-position-mode="target-right target")
 	md-button.md-icon-button.accountMenuButton(aria-label="Account Menu", ng-click="vm.openMenu($mdOpenMenu, $event)")
 		md-icon.angular-material-icons(md-menu-origin) account_circle
 	md-menu-content#accountMenuContent(width="3")
+		md-menu-item(style="color: #adadad;" layout-align="start center" flex)
+			md-icon.angular-material-icons(style="width: 56px;" md-menu-origin layout-align="start center") account_circle
+			| {{vm.account}}
+		md-divider
 		md-menu-item
 			md-button(ng-click="vm.showTeamspaces()")
 				md-icon.angular-material-icons(md-menu-align-target) view_list
