ISSUE #458 - Fix search bug

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -43,15 +43,19 @@ account-assign md-tabs-content-wrapper {
 }
 
 /** Account ***********************************************************************************************************/
-account-dir .loadingText {
+.loadingText {
   padding-top: 100px;
   min-height: 200px;
   height: 100%;
   text-align: center;
-  font-weight: lighter;
+  font-weight: lighter !important;
 }
 
-account-dir .loadingText md-progress-circular {
+.loadingText h3 {
+  font-weight: lighter !important;
+}
+
+.loadingText md-progress-circular {
   display: inline-block;
   margin: 0 auto;
   margin-left: 0 !important;
