--- a/frontend/components/account/pug/account-teamspaces.pug
+++ b/frontend/components/account/pug/account-teamspaces.pug
@@ -9,7 +9,7 @@
 
 			div.loadingText(ng-if="vm.loading") 
 				md-progress-circular
-				h3 Loading...
+				h3 Loading Teamspaces...
 
 			account-items(
 				ng-if="!vm.loading"
