ISSUE #458 - Fix issue with revisions not loading correctly

--- a/frontend/components/account/pug/account-licenses.pug
+++ b/frontend/components/account/pug/account-licenses.pug
@@ -7,8 +7,9 @@
 		.userContent
 			div.loadingText(
 				layout-align="center center"
-				flex="100")
-				//ng-if="vm.toShow === undefined") 
+				flex="100"
+				ng-if="vm.toShow === undefined") 
+
 				md-progress-circular
 				h3 Loading Licenses...
 
