--- a/frontend/components/account/pug/account-assign.pug
+++ b/frontend/components/account/pug/account-assign.pug
@@ -48,7 +48,7 @@
 									ng-if="user.permissions !== undefined && user.user")
 
 									td.userColumn.userInput
-										p {{user.user}} 
+										p {{user.user}}
 
 									td(ng-if="permission !== 'teamspace_admin'"
 										ng-repeat="(permission, value) in vm.teamspacePermissions") 
@@ -75,7 +75,7 @@
 			md-tab(label="Project", ng-click="vm.resetState()")
 				div.assignTabHolder.loadingHolder(layout="row" ng-if="vm.projectsLoading")
 					md-progress-circular.loading
-					h3 Loading Project Permissions...
+					h3 Loading Teamspace Permissions...
 
 				div.assignTabHolder(layout="column" ng-if="!vm.projectsLoading", flex="100")
 
@@ -161,7 +161,7 @@
 			md-tab(label="Models & Federations", ng-click="vm.resetState()")
 				div.assignTabHolder.loadingHolder(layout="row", ng-if="vm.loadingTeamspaces || vm.projectsLoading")
 					md-progress-circular.loading
-					h3 Loading Model Permissions...
+					h3 Loading Teamspace Permissions...
 
 				div.assignTabHolder(layout="column", ng-if="vm.modelDataReady()", flex="100")
 					div(layout="row")
