--- a/frontend/components/account/pug/account-menu.pug
+++ b/frontend/components/account/pug/account-menu.pug
@@ -4,7 +4,7 @@ md-menu#accountMenu(md-position-mode="target-right target")
 	md-menu-content#accountMenuContent(width="3")
 		md-menu-item(style="color: #adadad;" layout-align="start center" flex)
 			md-icon.angular-material-icons(style="width: 56px;" md-menu-origin layout-align="start center") account_circle
-			| {{vm.account}}
+			| {{vm.userAccount}}
 		md-divider
 		md-menu-item
 			md-button(ng-click="vm.showTeamspaces()")
