--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -31,6 +31,7 @@ div.homeContainer(
 			state='vm.state'
 			query='vm.query'
 			ng-if="vm.loggedIn"
+			is-mobile-device="vm.isMobileDevice"
 			keys-down="vm.keysDown")
 
 	#homeLegalContainer(
