ISSUE #458 - Fix federation editing

--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -111,6 +111,7 @@
 											account="account"
 											is-saving="vm.isSaving"
 											federation-data="vm.federationData"
+											original-federation-data="vm.originalFederationData"
 											setup-federation-data="vm.setupFederationData"
 											get-potential-federation-models="vm.getPotentialFederationModels"
 											is-default-federation="false"
@@ -180,6 +181,7 @@
 										project="project"
 										account="account"
 										federation-data="vm.federationData"
+										original-federation-data="vm.originalFederationData"
 										setup-federation-data="vm.setupFederationData"
 										get-potential-federation-models="vm.getPotentialFederationModels"
 										add-to-federation="vm.addToFederation"
