--- a/frontend/components/account/pug/federation-dialog.pug
+++ b/frontend/components/account/pug/federation-dialog.pug
@@ -125,6 +125,6 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 							ng-disabled="vm.isDuplicateName()", 
 							ng-click="vm.saveFederation(vm.federationData.teamspace, vm.federationData.project)") Save 
 							md-progress-circular.isSavingProgress(ng-if="vm.isSaving")
-						md-button.md-accent(ng-click="vm.closeDialog()") Cancel
+						md-button.md-accent(ng-click="vm.closeFederationDialog()") Cancel
 
 					p.modelDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
