ISSUE #458 - Remove search functionality on issue detail card

--- a/frontend/components/panel/pug/panel-card.pug
+++ b/frontend/components/panel/pug/panel-card.pug
@@ -9,6 +9,7 @@ div(layout="column", class="md-whiteframe-1dp")
 				h2
 					span {{vm.contentData.title}}
 			#filterContainer(flex)
+			div(flex, ng-if="!vm.showFilter")
 
 			// Options
 			#options(layout="row")
