--- a/frontend/components/issues/css/issues.css
+++ b/frontend/components/issues/css/issues.css
@@ -438,6 +438,13 @@ issue #issueNewComment {
   overflow-y: auto;
 }
 
+issue #issueNewComment textarea {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid rgb(230, 230, 230);
+  border-radius: 2px;
+  color: black;
+}
+
 issue #issueNewComment md-input-container {
   margin: 0px;
 }
