--- a/frontend/components/account/pug/account.pug
+++ b/frontend/components/account/pug/account.pug
@@ -65,6 +65,7 @@ div#accountHolder(
 			account-modelsetting(
 				ng-if="vm.username && vm.itemToShow === 'modelsetting'"
 				account="vm.account"
+				accounts="vm.accounts"
 				model="vm.model"
 				data="vm.data"
 				show-page="vm.showPage(page, callingPage, data)"
