--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -827,6 +827,19 @@ account-assign .assignTabHolder .noUsers {
   text-align: center;
 }
 
+/* account-assign .roleLoading {
+  width: 25px !important;
+  height: 25px !important;
+  display: block;
+  margin: auto;
+}
+
+account-assign .roleLoading svg {
+  width: 25px !important;
+  height: 25px !important;
+  transform-origin: initial !important;
+} */
+
 account-assign .loading {
     width: 50px;
     height: 50px;
