--- a/frontend/components/account/pug/account-modelsetting.pug
+++ b/frontend/components/account/pug/account-modelsetting.pug
@@ -10,7 +10,7 @@
 			div(layout="row")
 				md-input-container(flex)
 					label Model name
-					input(type="text", ng-model="vm.modelName", disabled)
+					input(type="text", ng-model="vm.modelName")
 				md-input-container(flex)
 
 			div(layout="row")
