ISSUE #458 - Measure tool with escape and less EventService

--- a/frontend/components/model/pug/model.pug
+++ b/frontend/components/model/pug/model.pug
@@ -4,6 +4,7 @@
 	#project-viewport-container.row(tabindex="0", tdr-focus="true")
 	
 	measure(
+		keys-down="vm.keysDown"
 		id='measure-tool'
 	 	account='vm.account' 
 		model='vm.model' 
