--- a/frontend/components/docs/css/docs.css
+++ b/frontend/components/docs/css/docs.css
@@ -23,7 +23,9 @@ docs .docsLoadInfo {
 }
 
 docs .dataItem {
-  padding: 0 15px;
+  padding-top: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
   outline: none;
 }
 
