ISSUE #521 - WIP towards custom login page

--- a/pug/logins/bw.pug
+++ b/pug/logins/bw.pug
@@ -17,7 +17,7 @@
 
 		.userContent(layout="column")
 			div.loginBox.loadingBox(layout="row")
-				h3.welcome {{vm.loginMessage}}!
+				h3.welcome Welcome to Bryden Wood BIM Portal
 
 			// Behaviour if we provide a notice to the user
 			span(ng-if="vm.userNotice") 
